Fix academy sponsor spacings

--- a/app/styles/pages/academy.less
+++ b/app/styles/pages/academy.less
@@ -19,6 +19,7 @@
     &__sponsors {
         justify-content: center;
         display: flex;
+        flex-wrap: wrap;
         list-style: none;
         margin: 0 auto 80px auto;
         max-width: 700px;
@@ -47,8 +48,16 @@
 
     &__sponsor {
         display: block;
-        flex: 0 1 100/5%;
+        flex: 0 1 100/3%;
         text-align: center;
+
+        &--3 {
+            flex: 0 1 100/3%;
+        }
+
+        &--4 {
+            flex: 0 1 100/4%;
+        }
     }
 
     &__sponsor-image {
